[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/Animals/Goat/goat_stripe animation.png" type="Texture" id=1]
[ext_resource path="res://Scene/Overlap/SoftCollisionComponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/Animals/WanderController.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/Animals/Goat/GoatStripe.gd" type="Script" id=4]
[ext_resource path="res://Classes/Foundation/States/Specific/KinematicBodyState.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[sub_resource type="Animation" id=2]
resource_name = "IdleDown"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleLeft"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=3]
resource_name = "IdleRight"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=5]
resource_name = "IdleUp"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "WanderDown"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=9]
resource_name = "WanderLeft"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=10]
resource_name = "WanderRight"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=8]
resource_name = "WanderUp"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=15]
blend_point_0/node = SubResource( 11 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 12 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 13 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 14 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "WanderLeft"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "WanderDown"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "WanderRight"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "WanderUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 25 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 26 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 27 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 28 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachine" id=16]
states/Idle/node = SubResource( 15 )
states/Idle/position = Vector2( 265, 107.716 )
states/Wander/node = SubResource( 22 )
states/Wander/position = Vector2( 467.667, 107.741 )
transitions = [ "Idle", "Wander", SubResource( 23 ), "Wander", "Idle", SubResource( 24 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[node name="GoatStripe" type="KinematicBody2D"]
script = ExtResource( 4 )
ACCELERATION = 300
MAX_SPEED = 50
FRICTION = 200
states_node_path = NodePath("States")

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
vframes = 4
frame = 1
region_enabled = true
region_rect = Rect2( 0, 0, 76, 76 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleDown = SubResource( 2 )
anims/IdleLeft = SubResource( 4 )
anims/IdleRight = SubResource( 3 )
anims/IdleUp = SubResource( 5 )
anims/RESET = SubResource( 7 )
anims/WanderDown = SubResource( 6 )
anims/WanderLeft = SubResource( 9 )
anims/WanderRight = SubResource( 10 )
anims/WanderUp = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 16 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 17 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Wander/blend_position = Vector2( 0, 0 )

[node name="WanderController" parent="." instance=ExtResource( 3 )]
wander_range = 320

[node name="Timer" parent="WanderController" index="0"]
wait_time = 10.0

[node name="SoftCollisionComponent" parent="." instance=ExtResource( 2 )]

[node name="StateTimer" type="Timer" parent="."]

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 5 )
animation_tree_node = NodePath("../../AnimationTree")
character_node = NodePath("../..")
animation_name = "Wander"

[node name="Wander" type="Node" parent="States"]
script = ExtResource( 5 )
animation_tree_node = NodePath("../../AnimationTree")
character_node = NodePath("../..")
animation_name = "Wander"
state_value = 1
is_lockable = true

[editable path="WanderController"]
